--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ a {
 
 ul {
   list-style: none;
+  padding: 0;
+}
+
+button {
+  padding: 0;
+  border: none;
 }
 
 .container {
@@ -54,6 +60,20 @@ body {
   margin-left: 85px;
 }
 
+.menu__btn {
+  display: none;
+  width: 40px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu__btn span {
+  background-color: #000;
+  height: 2px;
+  width: 100%;
+}
+
 .user-actions {
   display: flex;
   align-items: center;
@@ -62,4 +82,153 @@ body {
 
 .user-actions__item-search {
   margin-left: 80px;
+}
+
+.top {
+  background-image: url(../images/top-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: cover;
+}
+
+.top__inner {
+  min-height: 500px;
+  font-family: 'Cormorant', serif;
+  color: #fff;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.top__title {
+  font-size: 60px;
+  margin-bottom: 20px;
+  max-width: 780px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.top__text {
+  font-size: 24px;
+  margin-bottom: 48px;
+  max-width: 560px;
+  line-height: normal;
+}
+
+.blockquote__text {
+  font-family: 'Open Sans', serif;
+  text-align: center;
+  font-size: 40px;
+  font-style: italic;
+  line-height: normal;
+  max-width: 704px;
+  margin: 150px auto;
+}
+
+@media (max-width: 1000px) {
+  .user-actions__item-search {
+    margin-left: 30px;
+  }
+  .menu {
+    margin-right: auto;
+  }
+  .menu__list {
+    margin-left: 60px;
+  }
+  .logo {
+    margin-bottom: 0;
+  }
+  .header__inner {
+    min-height: auto;
+  }
+  .blockquote__text {
+    margin-top: 120px;
+    margin-bottom: 135px;
+  }
+}
+
+@media (max-width: 925px) {
+  .menu__list {
+    display: none;
+  }
+  .menu__btn {
+    display: flex;
+  }
+  .menu {
+    order: -1;
+    margin-right: 0;
+  }
+  .logo {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__inner {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+  .blockquote__text {
+    max-width: 640px;
+  }
+}
+
+@media (max-width: 680px) {
+  .container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header__inner {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .top__title {
+    font-size: 40px;
+    line-height: normal;
+  }
+  .blockquote__text {
+    font-size: 16px;
+    max-width: 376px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header__inner {
+    padding: 2px 0;
+  }
+  .logo img {
+    width: 39px;
+  }
+}
+
+@media (max-width: 360px) {
+  .top__inner {
+    min-height: 367px;
+  }
+  .user-actions__item-search {
+    margin-left: 0;
+  }
+  .top__title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .top__text {
+    font-family: 'Open Sans', serif;
+    font-size: 13px;
+    font-weight: 300;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+  .blockquote {
+    margin: 0;
+  }
+  .blockquote__text {
+    max-width: 340px;
+    margin-top: 70px;
+    margin-bottom: 80px;
+  }
 }
