--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ ul {
 button {
   padding: 0;
   border: none;
+  background-color: transparent;
 }
 
 .container {
@@ -66,6 +67,11 @@ body {
   height: 20px;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.mobile-nav,
+.menu__close {
+  display: none;
 }
 
 .menu__btn span {
@@ -149,8 +155,52 @@ body {
 }
 
 @media (max-width: 925px) {
+  .mobile-nav,
+  .menu__close {
+    display: block;
+  }
   .menu__list {
-    display: none;
+    transform: translateY(-100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 480px;
+    margin: 0 auto;
+    background-color: #fff;
+    display: block;
+    text-align: center;
+    padding-top: 60px;
+  }
+
+  .menu__list.menu__list--open {
+    transform: translateY(0%);
+  }
+  .menu__close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .menu__item {
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-family: 'Cormorant', serif;
+  }
+  .mobile-menu {
+    padding-top: 60px;
+    margin: 60px 30px;
+    border-top: 2px solid #f7f2ea;
+  }
+  .mobile-menu__item {
+    margin-bottom: 35px;
+  }
+  .mobile-actions {
+    background-color: #f7f2ea;
+    height: 60px;
+    padding: 0 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   .menu__btn {
     display: flex;
@@ -197,6 +247,9 @@ body {
 }
 
 @media (max-width: 480px) {
+  .menu__list {
+    width: 360px;
+  }
   .header__inner {
     padding: 2px 0;
   }
