--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ html {
   box-sizing: inherit;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -37,7 +47,7 @@ body {
   font-size: 20px;
   font-weight: 300;
   line-height: 1.5;
-  /* font-family: 'Cormorant', serif; */
+  position: relative;
 }
 
 .header__inner {
@@ -59,6 +69,8 @@ body {
   font-weight: 400;
   font-size: 18px;
   margin-left: 85px;
+  position: relative;
+  z-index: 3;
 }
 
 .menu__btn {
@@ -67,6 +79,24 @@ body {
   height: 20px;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+  z-index: 2;
+}
+
+.menu--close {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  transition: background-color 0.3s ease;
+}
+
+.menu--close.menu--open {
+  display: block;
 }
 
 .mobile-nav,
@@ -132,6 +162,37 @@ body {
   margin: 150px auto;
 }
 
+.assortment {
+  margin-bottom: 150px;
+}
+
+.assortment__title {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 400;
+  font-family: 'Cormorant', serif;
+  margin-bottom: 60px;
+}
+
+.assortment__list {
+  text-align: center;
+  display: flex;
+  gap: 0 40px;
+}
+
+.assortment__img {
+  max-width: 208px;
+  max-width: 208px;
+  width: 100%;
+}
+
+.assortment__name {
+  font-family: 'Cormorant', serif;
+  padding-top: 10px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
 @media (max-width: 1000px) {
   .user-actions__item-search {
     margin-left: 30px;
@@ -152,6 +213,16 @@ body {
     margin-top: 120px;
     margin-bottom: 135px;
   }
+
+  .assortment {
+    margin-bottom: 120px;
+  }
+  .assortment__title {
+    margin-bottom: 30px;
+  }
+  .assortment__list {
+    gap: 0;
+  }
 }
 
 @media (max-width: 925px) {
@@ -171,8 +242,8 @@ body {
     display: block;
     text-align: center;
     padding-top: 60px;
+    transition: transform 0.6s ease;
   }
-
   .menu__list.menu__list--open {
     transform: translateY(0%);
   }
@@ -223,6 +294,11 @@ body {
   .blockquote__text {
     max-width: 640px;
   }
+
+  .assortment__list {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 680px) {
@@ -255,6 +331,14 @@ body {
   }
   .logo img {
     width: 39px;
+  }
+
+  .assortment__title {
+    font-size: 24px;
+    margin-bottom: 0;
+  }
+  .assortment__img {
+    max-width: 159px;
   }
 }
 
