--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@ ul {
   padding: 0;
 }
 
+p,
+blockquote {
+  margin: 0;
+}
+
 button {
   padding: 0;
   border: none;
@@ -40,6 +45,18 @@ button {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 60px;
+  font-family: 'Cormorant', serif;
+  font-weight: 400;
+}
+
+/* .reviews__item.reviews__item--hide {
+  display: none;
+} */
 
 body {
   color: #151618;
@@ -166,14 +183,6 @@ body {
   margin-bottom: 150px;
 }
 
-.assortment__title {
-  text-align: center;
-  font-size: 40px;
-  font-weight: 400;
-  font-family: 'Cormorant', serif;
-  margin-bottom: 60px;
-}
-
 .assortment__list {
   text-align: center;
   display: flex;
@@ -191,6 +200,31 @@ body {
   padding-top: 10px;
   font-size: 24px;
   font-weight: 400;
+}
+
+.reviews {
+  padding: 60px 0;
+  background-color: #f7f2ea;
+}
+
+.reviews__list {
+  display: flex;
+  gap: 0 26px;
+  justify-content: center;
+}
+
+.reviews__item {
+  flex-basis: 280px;
+}
+
+.reviews__text {
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.reviews__name {
+  font-weight: 600;
 }
 
 @media (max-width: 1000px) {
@@ -217,11 +251,12 @@ body {
   .assortment {
     margin-bottom: 120px;
   }
-  .assortment__title {
-    margin-bottom: 30px;
-  }
+
   .assortment__list {
     gap: 0;
+  }
+  .reviews__item:last-child {
+    display: none;
   }
 }
 
@@ -299,6 +334,13 @@ body {
     flex-wrap: wrap;
     justify-content: center;
   }
+  .reviews__item:last-child {
+    display: block;
+  }
+  .reviews__list {
+    flex-wrap: wrap;
+    gap: 30px 76px;
+  }
 }
 
 @media (max-width: 680px) {
@@ -333,12 +375,25 @@ body {
     width: 39px;
   }
 
-  .assortment__title {
+  .assortment {
+    margin-bottom: 60px;
+  }
+  .title {
     font-size: 24px;
     margin-bottom: 0;
   }
   .assortment__img {
     max-width: 159px;
+  }
+
+  .reviews {
+    padding: 50px 0;
+  }
+  .reviews__item {
+    flex-basis: 202px;
+  }
+  .reviews__list {
+    gap: 30px 20px;
   }
 }
 
@@ -367,5 +422,12 @@ body {
     max-width: 340px;
     margin-top: 70px;
     margin-bottom: 80px;
+  }
+  .reviews__item {
+    flex-basis: 100%;
+  }
+  .reviews__item:last-child,
+  .reviews__item:first-child {
+    display: none;
   }
 }
