--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: normal;
   position: relative;
 }
 
@@ -166,7 +166,6 @@ body {
   font-size: 24px;
   margin-bottom: 48px;
   max-width: 560px;
-  line-height: normal;
 }
 
 .blockquote__text {
@@ -174,7 +173,7 @@ body {
   text-align: center;
   font-size: 40px;
   font-style: italic;
-  line-height: normal;
+
   max-width: 704px;
   margin: 150px auto;
 }
@@ -227,6 +226,71 @@ body {
   font-weight: 600;
 }
 
+.main-blog {
+  padding: 150px 0;
+}
+
+.main-blog__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 58px;
+}
+
+.main-blog__item {
+  flex-basis: 542px;
+  display: flex;
+  gap: 0 20px;
+}
+
+.main-blog__item-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-blog__item-title {
+  font-family: 'Cormorant', serif;
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  min-height: 86px;
+}
+
+.main-blog__item-author {
+  font-size: 13px;
+}
+
+.main-blog__item-link {
+  font-size: 13px;
+  margin-top: auto;
+  position: relative;
+}
+
+.main-blog__item-link::after {
+  content: '';
+  background-image: url(../images/arrow.svg);
+  position: absolute;
+  bottom: 3px;
+  width: 5px;
+  height: 10px;
+  margin-left: 8px;
+}
+
+.main-blog__link {
+  padding: 12px 41px;
+  display: flex;
+  justify-content: center;
+  margin: 72px auto 0;
+  border: 1px solid #151618;
+  width: 152px;
+}
+
+.mailing-list {
+  padding: 100px 0;
+  background-color: #f7f2ea;
+  background-image: url(../images/mailing-bg.png);
+}
+
+/* ---------------- media ----------------- */
 @media (max-width: 1000px) {
   .user-actions__item-search {
     margin-left: 30px;
@@ -254,6 +318,10 @@ body {
 
   .assortment__list {
     gap: 0;
+  }
+
+  .reviews {
+    margin-bottom: 120px;
   }
   .reviews__item:last-child {
     display: none;
@@ -354,7 +422,6 @@ body {
   }
   .top__title {
     font-size: 40px;
-    line-height: normal;
   }
   .blockquote__text {
     font-size: 16px;
@@ -388,6 +455,7 @@ body {
 
   .reviews {
     padding: 50px 0;
+    margin-bottom: 60px;
   }
   .reviews__item {
     flex-basis: 202px;
@@ -422,6 +490,10 @@ body {
     max-width: 340px;
     margin-top: 70px;
     margin-bottom: 80px;
+  }
+
+  .reviews {
+    margin-bottom: 50px;
   }
   .reviews__item {
     flex-basis: 100%;
