--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ a {
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 p,
@@ -406,6 +407,127 @@ body {
   margin-bottom: 30px;
 }
 
+.footer {
+  padding: 100px 0 20px;
+  background-color: #f7f2ea;
+}
+
+.footer__inner {
+  margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0 40px;
+}
+
+.footer__products-title,
+.footer__company-title,
+.footer__contacts-title {
+  font-weight: 400;
+  font-size: 24px;
+  font-family: 'Cormorant', serif;
+  margin-bottom: 50px;
+}
+
+.footer__products-items,
+.footer__company-items {
+  margin-bottom: 20px;
+}
+
+.footer__blockquote-text {
+  margin-top: 80px;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+.footer__blockquote-author {
+  font-size: 12px;
+  font-style: normal;
+}
+
+.footer__blockquote-author span {
+  display: block;
+}
+
+.footer__contacts-text {
+  font-size: 13px;
+  margin-bottom: 20px;
+}
+
+.footer__nav {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer__nav-logo {
+  margin-right: 40px;
+}
+
+.footer__nav-contacts {
+  margin-top: 20px;
+}
+
+.footer__nav-phone,
+.footer__nav-email {
+  font-size: 13px;
+  position: relative;
+  padding-left: 32px;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.footer__nav-phone::before,
+.footer__nav-email::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 2px;
+  width: 22px;
+  height: 16px;
+  background-image: url(../images/mail.svg);
+}
+
+.footer__nav-phone::before {
+  width: 21px;
+  height: 21px;
+  background-image: url(../images/phone.svg);
+}
+
+.footer__social {
+  margin-top: 40px;
+  margin-left: 97px;
+}
+
+.footer__social-list {
+  display: flex;
+  align-items: center;
+  gap: 0 20px;
+}
+
+.footer__social-link {
+  display: grid;
+}
+
+.footer__bottom {
+  display: flex;
+  align-items: center;
+}
+
+.footer__copy {
+  margin-right: 192px;
+  font-size: 16px;
+}
+
+.partners-logo {
+  display: flex;
+  align-items: center;
+  gap: 0 20px;
+}
+
+.partners-logo__item--mastercard {
+  display: flex;
+  margin-top: 3px;
+}
+
 /* ---------------- media ----------------- */
 @media (max-width: 1000px) {
   .user-actions__item-search {
@@ -480,6 +602,25 @@ body {
   }
   .priorities__text {
     margin-bottom: 40px;
+  }
+
+  .footer__blockquote {
+    width: 270px;
+  }
+  .footer__blockquote-text {
+    margin-top: 0;
+  }
+  .footer__inner {
+    margin-bottom: 50px;
+  }
+  .footer__copy {
+    margin-right: 40px;
+  }
+  .footer__nav-logo {
+    margin-right: 36px;
+  }
+  .footer__contacts {
+    width: 270px;
   }
 }
 
@@ -583,6 +724,22 @@ body {
   .main-blog__item:nth-child(even) {
     margin-left: 98px;
   }
+
+  .footer__inner {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+  }
+  .footer__products,
+  .footer__company {
+    grid-row: span 3;
+  }
+  .footer__contacts {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+  }
+  .footer__copy {
+    margin-right: 120px;
+  }
 }
 
 @media (max-width: 680px) {
@@ -678,6 +835,53 @@ body {
   .priorities__list {
     gap: 50px 130px;
   }
+
+  .footer {
+    padding: 50px 0 10px;
+  }
+  .footer__inner {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer__blockquote {
+    width: 100%;
+  }
+  .footer__blockquote-text {
+    margin-bottom: 10px;
+    margin-top: 50px;
+  }
+  .footer__contacts {
+    margin-top: 50px;
+    width: 100%;
+  }
+  .footer__contacts-title {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .footer__contacts-text {
+    text-align: center;
+  }
+  .footer__nav {
+    flex-wrap: nowrap;
+  }
+  .footer__social {
+    margin-left: 30px;
+  }
+  .footer__copy {
+    margin-right: auto;
+  }
+  .footer__products {
+    margin-right: auto;
+    padding-right: 20px;
+  }
+  .footer__company {
+    padding-right: 20px;
+    margin-right: 55px;
+  }
+  .footer__products-title,
+  .footer__company-title {
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 360px) {
@@ -767,5 +971,13 @@ body {
   }
   .main-blog__link {
     width: 67px;
+  }
+
+  .footer__company {
+    padding-right: 15px;
+    margin-right: 0;
+  }
+  .footer__nav {
+    flex-wrap: wrap;
   }
 }
