--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,21 @@ html {
   box-sizing: inherit;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
+}
+
 h1,
 h2,
 h3,
@@ -974,10 +989,18 @@ body {
   }
 
   .footer__company {
-    padding-right: 15px;
+    padding-right: 10px;
     margin-right: 0;
   }
   .footer__nav {
     flex-wrap: wrap;
+    justify-content: center;
+  }
+  .footer__products {
+    padding-right: 0;
+  }
+  .footer__social {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
